--- a/home.html
+++ b/home.html
@@ -29,9 +29,10 @@
     <p> Subcribe Easy Totorials YouYube Channel to Watch more Videos, press <br>
         the bell icon to get latest updates.  </p>
    <div>
-    <button type="button"><span></span>Learn More </button>
-    <button type="button"><span></span>Visit Cources</button>
-   </div> 
+  <a href="about.html"><button type="button"><span></span>Learn More</button></a>
+  <a href="course.html"><button type="button"><span></span>Visit Courses</button></a>
+</div>
+
 </div>
     </div>
     <section id="course">
